kubernetes/apps/media/radarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.poolnode.net`)
      kind: Rule
      services:
        - name: radarr-service
          kind: Service
          namespace: media
          scheme: http
          port: 7878
  tls:
    secretName: poolnode-wildcard-tls
